--- a/index.html
+++ b/index.html
@@ -420,6 +420,45 @@
             <header>
               <h2>
                 <a
+                  href="https://jocular-fenglisu-a1fb6a.netlify.app/"
+                  target="_blank"
+                  >Car Hub(in Progress)</a
+                >
+              </h2>
+            </header>
+            <a
+              href="https://jocular-fenglisu-a1fb6a.netlify.app/"
+              class="image fit"
+              target="_blank"
+              ><img src="/images/car_hop.png" alt="" width="410" height="249"
+            /></a>
+
+            <p>
+              In this project, I aim to create a responsive and accessible
+              dealership application using Next.js, Tailwind CSS, Headless UI,
+              and RapidAPI integration. These technologies are widely recognized
+              and essential in the industry for building modern and robust web
+              applications with efficient server-side rendering, responsive
+              styling, customizable UI components, and seamless integration with
+              external APIs.
+            </p>
+
+            <ul class="actions special">
+              <li>
+                <a
+                  href="https://github.com/TheWonderingGecko/Mearn-stack-trial-site"
+                  class="button"
+                  target="_blank"
+                  >Source Code</a
+                >
+              </li>
+            </ul>
+          </article>
+
+          <article>
+            <header>
+              <h2>
+                <a
                   href="https://iridescent-liger-e96cce.netlify.app/"
                   target="_blank"
                   >Little lemon(in Progress)</a
@@ -438,43 +477,11 @@
             /></a>
 
             <p>
-              This project is the summation of the Meta Frontend Developer
-              Course through coursera. I use tailwind so it is formatted only
-              for the mobile view at the moment.
+              This project is the culmination of the Meta Frontend Developer
+              Course through Coursera. I have utilized Tailwind CSS for the
+              styling of the application. The project is designed to be
+              responsive and accessible across various devices and screen sizes.
             </p>
-            <div class="difficulty-2">
-              <ul>
-                <li class="no-border">
-                  <img
-                    src="images/HTML5_Logo_512.png"
-                    alt="HTML logo"
-                    class="dif-image"
-                  />
-                </li>
-                <li>
-                  <img
-                    src="images/1024px-CSS.3.svg.png"
-                    alt="CSS logo"
-                    class="dif-image"
-                  />
-                </li>
-
-                <li>
-                  <img
-                    src="images/Unofficial_JavaScript_logo_2.svg.png"
-                    alt="JS logo"
-                    class="dif-image"
-                  />
-                </li>
-                <li>
-                  <img
-                    src="images/React-icon.svg.png"
-                    alt="React logo"
-                    class="dif-image"
-                  />
-                </li>
-              </ul>
-            </div>
 
             <ul class="actions special">
               <li>
